--- a/app/views/gifts/_form.html.haml
+++ b/app/views/gifts/_form.html.haml
@@ -17,4 +17,4 @@
     = f.input :date_discontinued, html5: true, label: 'Date Discontinued'
 
   .form-actions
-    = f.button :submit, 'Save'
+    = f.button :submit, 'Save', class: 'btn btn-primary'
