--- a/app/views/survey_questions/edit_multiple_choice.haml
+++ b/app/views/survey_questions/edit_multiple_choice.haml
@@ -17,7 +17,7 @@
         = render 'option_row', option: option
 
     = simple_form_for @survey_question_option, url: survey_question_options_path(@survey, @survey_question), remote: true, html: {class: 'form form-inline', data: {new_option_form: true, type: 'html'}} do |option_form|
-      = option_form.input :text, label: false, as: :string, input_html: {data: {new_option_text: true}}
+      = option_form.input :text, label: false, as: :string, input_html: {data: {new_option_text: true}}, placeholder: 'Choice text'
       = option_form.submit 'Add New Choice', class: 'btn btn-primary', data: {disable_with: 'Adding...'}
 
     %h3 Additional Options
