--- a/app/views/gift_products/index.haml
+++ b/app/views/gift_products/index.haml
@@ -12,7 +12,7 @@
       %li(role="presentation")= link_to 'Images', gift_images_path(@gift)
 
 .row
-  .col-sm-6
+  .col-sm-6.shadowed-box__01
     %h3 Products in this Gift
     - if @gift.gift_products.empty?
       %i None yet, add some below!
@@ -22,7 +22,6 @@
           %th
           %th Title
           %th Units Available 
-          %th Wrapt SKU
           %th
         %tbody
           - @gift.gift_products.preload(product: :primary_product_image).each do |gift_product|
@@ -32,7 +31,7 @@
                 - if product.primary_product_image.present?
                   = image_tag product.primary_product_image.image_url(:small), class: 'admin-index-table--image'
               %td= product.title
-              %td= product.wrapt_sku
+              %td= number_with_delimiter product.units_available
               %td= link_to 'Remove', gift_product_path(@gift, gift_product, context_params), method: 'delete', data: {confirm: 'Are you sure?'}, class: 'btn btn-xs btn-danger'
 
   .col-sm-6
@@ -40,7 +39,7 @@
     %form.form-inline(method="GET")
       .form-group
         %input{type: 'hidden', name: 'page', value: params[:page]}
-        %input.form-control{type: 'search', name: 'q', value: params[:q], placeholder: 'Title or SKU'}
+        %input.form-control{type: 'search', name: 'q', value: params[:q], placeholder: 'Title or SKU', style: 'min-width: 300px;'}
         %button.btn.btn-primary
           %i.glyphicon.glyphicon-search
           Search
