--- a/app/views/survey_questions/edit_multiple_choice.haml
+++ b/app/views/survey_questions/edit_multiple_choice.haml
@@ -12,8 +12,8 @@
         = form.submit 'Save Prompt', class: 'btn btn-primary'
 
     %h3 Choices
-    %ol{style: "list-style: lower-alpha; padding-left: 15px;", data: {option_list: true, sortable_list: true, sortable_list_href: survey_question_option_ordering_path(@survey, @survey_question)}}
-      - @survey_question.options.standard.each do |option|
+    %ol{style: "list-style: lower-alpha; padding-left: 15px;", data: {option_list: true, sortable_list: true, sortable_list_href: survey_question_option_ordering_path(@survey, @survey_question)}, class: option_list_classes}
+      - @options.each do |option|
         = render 'option_row', option: option
 
     = simple_form_for @survey_question_option, url: survey_question_options_path(@survey, @survey_question), remote: true, html: {class: 'form form-inline', data: {new_option_form: true, type: 'html'}} do |option_form|
