--- a/app/assets/stylesheets/_bootstrap-custom.scss
+++ b/app/assets/stylesheets/_bootstrap-custom.scss
@@ -45,6 +45,8 @@
 @import "bootstrap/responsive-embed";
 @import "bootstrap/wells";
 @import "bootstrap/close";
+// GR customizations
+@import "bootstrap_custom/bootstrap_sliders_custom";
 
 // Components w/ JavaScript
 @import "bootstrap/modals";
