--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,8 +16,9 @@
 
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
-// @import "bootstrap-sliders-custom";
+// @import "helpers/variables"; included in bootstrap_custom
 @import "helpers/mixins";
+@import "helpers/margins_padding";
 @import "modules/admin/admin";
 
 
