--- a/app/views/survey_questions/_multiple_choice_preview.haml
+++ b/app/views/survey_questions/_multiple_choice_preview.haml
@@ -11,7 +11,7 @@
             = option.text
             - if option.image?
               %br
-              = image_tag option.image_url(:small)
+              = image_tag option.image_url(:small), class: 'mb4'
       
 
         - if @survey_question.include_other_option?
