--- a/app/assets/stylesheets/modules/admin/_lists_tables.scss
+++ b/app/assets/stylesheets/modules/admin/_lists_tables.scss
@@ -2,13 +2,19 @@
   margin-top: 18px;
 }
 .question-list__item {
-  margin-top: 28px;
   position: relative;
 }
-.question-list__item .glyphicon {
+.question-list__item .glyphicon-move {
   position: absolute;
   left: -40px;
   top: 2px;
+}
+.edit-question-list {
+  list-style: lower-alpha;
+}
+.edit-question-list__item.question-list__item .glyphicon-move {
+  left: -38px; // aiyee magic numbers
+  top: 3px;
 }
 .question-list__icon {
   background-position: left center;
