--- a/app/views/survey_questions/_option_row.haml
+++ b/app/views/survey_questions/_option_row.haml
@@ -1,4 +1,5 @@
-%li{style: "margin-bottom: 10px;", data: {option_row: true, sortable_item: true, sortable_item_id: option.id}, class: option_item_classes(option)}
+%li.edit-question-list__item.question-list__item.mb4{data: {option_row: true, sortable_item: true, sortable_item_id: option.id}, class: option_item_classes(option)}
+  %i.glyphicon.glyphicon-move
   = option.text
   = link_to edit_survey_question_option_path(@survey, @survey_question, option), data: {remote: true, edit_option_link: option.id} do
     %span.glyphicon.glyphicon-pencil(aria-hidden="true")
