--- a/app/views/survey_questions/_preview.haml
+++ b/app/views/survey_questions/_preview.haml
@@ -1,4 +1,4 @@
 %div{data: {question_preview: true, question_preview_href: preview_survey_question_path(@survey, @survey_question)}}
-  %h2 Preview
-  %h3= @survey_question.prompt
+  %h2.mb4 Preview
+  %h4= @survey_question.prompt
   = render preview_partial(@survey_question)
