better interface for switching impact correlation [#130663955]

--- a/app/assets/stylesheets/modules/admin/_admin.scss
+++ b/app/assets/stylesheets/modules/admin/_admin.scss
@@ -6,6 +6,7 @@
 @import "typography";
 @import "image_gallery_manager";
 @import "gift_products";
+@import "gift_question_impacts";
 // @import "gift_images";
 
 .admin__actions,
