--- a/app/views/training_set_evaluations/show.haml
+++ b/app/views/training_set_evaluations/show.haml
@@ -3,7 +3,11 @@
     %h1= @training_set_evaluation.training_set.name
 
     - if @training_set_evaluation.stale? || @recommendations_by_survey_response_id.empty?
-      %p We're still generating recommendations for this training set.  Please refresh the page.
+      %p
+        = image_tag 'ajax-loader.gif'
+        We're still generating recommendations for this training set.  Please wait a moment.
+      :javascript
+        setTimeout(function() { window.location.reload() }, 5000)
 
     - else
       - @training_set_evaluation.profile_sets.preload(:survey_responses).each do |profile_set|
