[#130526619] [#130526475] Training Set import now has a page for uploading a spreadsheet and checks that the right headers exist. Factored out some commonality with the Profile Set import.

--- a/app/views/profile_sets/imports/_form.html.haml
+++ b/app/views/profile_sets/imports/_form.html.haml
@@ -17,7 +17,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :question_responses_file, as: :file
+    = f.input :records_file, as: :file
 
   .form-actions
     = f.submit 'Import', class: 'btn btn-primary'
