--- a/app/views/training_sets/show.html.haml
+++ b/app/views/training_sets/show.html.haml
@@ -10,6 +10,8 @@
 
     %h3 Gift-Questions
 
+    = link_to "Import Impacts", new_training_set_import_path(@training_set), class: 'btn btn-primary'
+
     %table.table(style="table-layout: fixed;")
       %thead
         %tr
