--- a/app/views/survey_questions/_text_fields.haml
+++ b/app/views/survey_questions/_text_fields.haml
@@ -1,1 +1,1 @@
--# nothing special for text questions
+= form.input :use_response_as_name, label: 'Use the response to this question as the gift recipient\'s name'
