async image processing for product images WIP [#131167203]

--- a/app/views/product_images/_breadcrumbs.haml
+++ b/app/views/product_images/_breadcrumbs.haml
@@ -1,3 +1,4 @@
-.row.breadcrumbs
-  .col-sm-12
-    = link_to "&laquo; Products".html_safe, products_path
+- unless action_name == 'new'
+  .row.breadcrumbs
+    .col-sm-12
+      = link_to "&laquo; Products".html_safe, products_path
