--- a/app/views/training_sets/imports/_form.html.haml
+++ b/app/views/training_sets/imports/_form.html.haml
@@ -1,3 +1,4 @@
+= render 'imports/processing_import_modal'
 = simple_form_for @training_set_import do |f|
   %p
     Here you can upload an Excel spreadsheet containing impacts for questions
