--- a/app/views/product_images/index.haml
+++ b/app/views/product_images/index.haml
@@ -10,7 +10,7 @@
 
 .row
   .col-sm-12
-    = direct_upload_form_for @uploader, url: product_images_path(@product), html: {class: 'form form-inline admin__image-upload-form', data: {image_upload_form: true}} do |form|
+    = direct_upload_form_for @uploader, html: {class: 'form form-inline admin__image-upload-form', data: {image_upload_form: true}} do |form|
       %span.btn.btn-default(data-image-upload-trigger)
         %i.glyphicon.glyphicon-plus
         %span Upload New Image
