--- a/app/views/product_images/index.haml
+++ b/app/views/product_images/index.haml
@@ -26,7 +26,8 @@
             - if product_image.image_processed?
               = image_tag product_image.image_url(:small)
             - else
-              = image_tag 'ajax-loader.gif'
+              .admin__image-loading-wrapper
+                = image_tag 'ajax-loader.gif', class: 'loading-spinner'
             .admin__image-actions.left
               %span.btn.btn-xs.btn-default.admin__image-hover-link
                 %i.glyphicon.glyphicon-move
