--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -21,6 +21,7 @@
     .row
       .col-xs-4
         = f.input :wrapt_sku, label: 'Wrapt SKU'
+        = f.input :vendor_sku, label: 'Vendor SKU'
 
     %h3 Categories
     = f.association :product_categories, as: :check_boxes, collection: ProductCategory.all_for_product_form, label_method: :name_for_product_form
