vendor cost -> wrapt cost

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -16,7 +16,7 @@
           = f.input_field :vendor_retail_price, class: 'form-control'
         = f.input :vendor_cost, label: 'Vendor Cost', wrapper: :vertical_input_group do
           .input-group-addon $
-          = f.input_field :vendor_cost, class: 'form-control'
+          = f.input_field :wrapt_cost, class: 'form-control'
         = f.input :units_available,label: 'Units Available'
     .row
       .col-xs-4
