cleanup other uses

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -14,7 +14,7 @@
         = f.input :vendor_retail_price, label: 'Vendor Retail Price', wrapper: :vertical_input_group do
           .input-group-addon $
           = f.input_field :vendor_retail_price, class: 'form-control'
-        = f.input :vendor_cost, label: 'Vendor Cost', wrapper: :vertical_input_group do
+        = f.input :wrapt_cost, label: 'Wrapt Cost', wrapper: :vertical_input_group do
           .input-group-addon $
           = f.input_field :wrapt_cost, class: 'form-control'
         = f.input :units_available,label: 'Units Available'
