--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -20,8 +20,8 @@
       = number_to_currency @product.vendor_retail_price
 
     %p
-      %b Vendor Cost:
-      = number_to_currency @product.vendor_cost
+      %b Wrapt Cost:
+      = number_to_currency @product.wrapt_cost
 
     %p
       %b Units Available:
