add source vendor to products

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -5,6 +5,7 @@
     = f.input :title
     = f.input :description
     = f.association :vendor
+    = f.association :source_vendor
     
     .row
       .col-xs-3
