--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -13,6 +13,7 @@
         %tr
           %th
           %th Title
+          %th Wrapt SKU
           %th Wrapt Cost
           %th Vendor Retail Price
           %th Units Available
@@ -26,6 +27,7 @@
               - if product.primary_product_image.present?
                 = image_tag product.primary_product_image.image_url(:small), class: 'admin-index-table--image'
             %td= product.title
+            %td= product.wrapt_sku
             %td= number_to_currency product.wrapt_cost
             %td= number_to_currency product.vendor_retail_price
             %td= number_with_delimiter product.units_available
