[#131434457] Response Set Import now complains about blank cells for survey_response_name and question_code. In addition, depending on the type, it requires either text_response or slider_response to not be blank, or it requires one of the choice_ columns to be a '1'.

--- a/app/views/profile_sets/imports/_form.html.haml
+++ b/app/views/profile_sets/imports/_form.html.haml
@@ -20,6 +20,20 @@
   .form-inputs
     = f.input :records_file, as: :file
 
+  - if @profile_set_import.row_errors.any?
+    .form-group.has-error
+      %span.help-block
+        %ul
+          - @profile_set_import.row_errors.each do |row_number, row_error|
+            %li
+              Row #{row_number}
+              %ul
+                - row_error.each do |attribute, messages|
+                  - if attribute.is_a? Array
+                    %li #{attribute.join(', ')}: #{messages.join(', ')}
+                  - else
+                    %li #{attribute}: #{messages.join(', ')}
+
   .form-actions
     = f.submit 'Import', class: 'btn btn-primary'
 
