auto calculate cost from products [#131201023]

--- a/app/views/gifts/_form.html.haml
+++ b/app/views/gifts/_form.html.haml
@@ -11,7 +11,8 @@
           = f.input_field :selling_price, class: 'form-control'
         = f.input :cost, wrapper: :vertical_input_group do
           .input-group-addon $
-          = f.input_field :cost, class: 'form-control'
+          = f.input_field :cost, class: 'form-control', disabled: @gift.calculate_cost_from_products?
+        = f.input :calculate_cost_from_products, label: 'Auto-Calculate Cost from Products'
         = f.input :wrapt_sku, label: 'Wrapt SKU'
     = f.input :date_available, html5: true, label: 'Date Available'
     = f.input :date_discontinued, html5: true, label: 'Date Discontinued'
